# dagster-dbt-blue-green-deploys

./: .gitignore  README.md  pyproject.toml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: clone_green_to_blue.sql  generate_schema_name.sql  revert_via_time_travel.sql  swap_all_marts_if_clean.sql  swap_blue_to_green.sql
dbt_project/models/marts/: mart_customers.sql  mart_orders.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql
dbt_project/seeds/: raw_customers.csv  raw_orders.csv
src/dbt_bluegreen_demo/components/: blue_green_dbt_component.py  scheduled_job_component.py
src/dbt_bluegreen_demo/defs/dbt_blue_green/: defs.yaml
src/dbt_bluegreen_demo/defs/dbt_blue_green_cloud/: checks.py.example  defs.yaml.example
src/dbt_bluegreen_demo/defs/duplicate_checks/: checks.py
src/dbt_bluegreen_demo/defs/native_blue_green/: assets.py
src/dbt_bluegreen_demo/defs/resources/: resources.py
src/dbt_bluegreen_demo/defs/schedules/: defs.yaml
