[project]
name = "dbt_bluegreen_demo"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.4",
    "dagster-dbt>=0.29.4",
    "dagster-snowflake>=0.29.4",
    "dbt-core>=1.8,<1.9",
    "dbt-duckdb>=1.10.1",
    "dbt-snowflake>=1.8,<1.9",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dbt_bluegreen_demo"
registry_modules = [
    "dbt_bluegreen_demo.components.*",
]


